v0.2.0: 규칙 보강 + review 커맨드 + 자동 스모크 테스트
- paths frontmatter 제거(신규 파일 생성 시 미로드 위험) → when_to_use 트리거로 대체
- 규칙 추가: SequencedCollection, preview 금지, @MockitoBean, List.of(null) 함정,
  OSIV off, enum vs sealed, 스터빙 스타일 통일, 레거시 일관성
- /java-code-consultant:review 커맨드(git 변경분 리뷰, 보고 전용)
- tests/: 위반 픽스처 + EXPECTED.md + smoke.sh (8/8 통과 확인)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>